src/test/ui/generator/yield-while-local-borrowed.stderr
error[E0626]: borrow may still be in use when generator yields (Ast)
  --> $DIR/yield-while-local-borrowed.rs:24:22
   |
LL |         let a = &mut 3;
   |                      ^
...
LL |         yield();
   |         ------- possible yield occurs here

error[E0626]: borrow may still be in use when generator yields (Ast)
  --> $DIR/yield-while-local-borrowed.rs:52:22
   |
LL |             let b = &a;
   |                      ^
...
LL |             yield();
   |             ------- possible yield occurs here

error[E0626]: borrow may still be in use when generator yields (Mir)
  --> $DIR/yield-while-local-borrowed.rs:24:17
   |
LL |         let a = &mut 3;
   |                 ^^^^^^
...
LL |         yield();
   |         ------- possible yield occurs here

error[E0626]: borrow may still be in use when generator yields (Mir)
  --> $DIR/yield-while-local-borrowed.rs:52:21
   |
LL |             let b = &a;
   |                     ^^
...
LL |             yield();
   |             ------- possible yield occurs here

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0626`.
